# ai-daily-clipping

./: .gitignore  CRAWLING.md  SPEC.md  prompt-translate.md  prompt.md  pyproject.toml
.claude/: scheduled-task-prompt.md
.claude/skills/: ai-clipping-agent.md
.github/workflows/: daily-crawl.yml
deploy/: 2026-03-15.html
output/: 2026-03-15.html  2026-03-15.json  2026-03-16.json  2026-03-18.json  2026-03-19.json  2026-03-20.json  2026-03-21.json  2026-03-22.json  2026-03-23.json  2026-03-24.json  2026-03-25.json  2026-03-26.json  2026-03-27.json  2026-03-28.json  2026-03-29.json  2026-03-30.json  2026-03-31.json  2026-04-01.json  2026-04-02.json  2026-04-03.json  2026-04-04.json  2026-04-05.json  2026-04-06.json  2026-04-07.json  2026-04-08.json  2026-04-09.json  2026-04-10.json  2026-04-11.json  2026-04-12.json  2026-04-13.json  2026-04-14.json  2026-04-15.json  2026-04-16.json  2026-04-16.raw.json  2026-04-17.json  2026-04-17.raw.json  2026-04-18.json  2026-04-18.raw.json  2026-04-19.json  2026-04-19.raw.json  (+29 more)
src/: config.py  content.py  formatter.py  http_client.py  main.py  models.py  output.py  summarizer.py
src/crawlers/: arxiv.py  github.py  hackernews.py  huggingface.py  producthunt.py  reddit.py  rss.py
src/processors/: dedup.py  filter.py  tagger.py
